# Projects

./: .gitignore  MilkWayStarDensity.py  README.md
Algorithm_Visualizer/: CMakeLists.txt  To_Run_Or_Not_To_Run.sh  Visualizer.cpp  main.cpp
Binary Star/: Animation dt=200.webm  Animation dt=300.webm  README.md  Run_Binary_System.py
Binary Star/2D_Turtle_Simualtion/: Binary_Star_System.py
Computational-Astrophysics/3D_N-Body_Simulation/: Binary_System.py  Vectors.py
Computational-Astrophysics/3D_N-Body_Simulation/2D_Turtle_Simualtion/: Binary_Star_System_Run.py  Create_Animation.sh
Computational-Astrophysics/Binary Star/2D_Turtle_Simualtion/: README.md
Computational-Astrophysics/Celestial_Classifier/: Classifier.ipynb
Computational-Astrophysics/Gravitational_Potential/: CMakeLists.txt  To_Run_Or_Not_To_Run.sh  main.cpp
CryptoPals/: C1.ipynb  C2.ipynb  C3.ipynb  C4.ipynb  C5.ipynb  C6.ipynb  C7.ipynb  C8.ipynb  C9.ipynb  crypto_functions.py
Gravitational_Potential/: To_Run_Or_Not_To_Run.sh
HTTP_Web_Server/: HTTP_Server.py
HTTP_Web_Server/htdocs/: 404.html  ATG.html  index.html
Nand2Tetris/01/: And.hdl  And16.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Nand.hdl  Nand16.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
Nand2Tetris/02/: ALU.hdl  FullAdder.hdl
Nand2Tetris/03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl  repeat.sh
Nand2Tetris/04/: Fill.asm  Fill_optimized.asm  Mult.asm  Mult_optimized.asm
